<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_text">Enter your email</string>
    <string name="password_text">Enter your Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="create_new">Create New</string>
    <string name="password">Password</string>
    <string name="welcome_text_1">Welcome to Shoe Factory</string>
    <string name="welcome_text_2">Choose among the Best collection of Shoes suitable for all</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_text_1">View the selected Shoe list</string>
    <string name="instruction_text_2">Add new entry to Shoe list cart by selecting (+) icon below</string>
    <string name="shoe_list">ShoeList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="long_text">Hi, my name is Aleks.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\nI\'ll be happy to teach you how to make your own aquarium.
\nYou should ask someone else about fishing, though.\n\n</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Company</string>
</resources>
