<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.InstructionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instruction_text1"
            style="@style/bannerTextStyle"
            android:layout_marginTop="100dp"
            android:text="@string/instruction_text_1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/instruction_text2"
            android:text="@string/instruction_text_2"
            android:layout_below="@id/instruction_text1"
            style="@style/bannerTextStyle"/>

        <Button
            android:id="@+id/btn_shoelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instruction_text2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/shoe_list"
            android:textAlignment="textEnd" />

    </RelativeLayout>
</layout>