<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_shoe_name"
            style="@style/detailTextStyle"
            android:text="@string/shoe_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_shoe_name"
            style="@style/detailEditStyle"
            android:text="Running Shoe"
            app:layout_constraintBottom_toBottomOf="@+id/text_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_shoe_name"
            app:layout_constraintTop_toTopOf="@+id/text_shoe_name" />

        <TextView
            android:id="@+id/text_company"
            style="@style/detailTextStyle"
            android:layout_marginTop="32dp"
            android:text="@string/shoe_company"
            app:layout_constraintEnd_toStartOf="@+id/edit_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_name" />

        <EditText
            android:id="@+id/edit_company"
            style="@style/detailEditStyle"
            android:text="Bata"
            tools:text="Bata"
            app:layout_constraintBottom_toBottomOf="@+id/text_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_company"
            app:layout_constraintTop_toTopOf="@+id/text_company" />

        <TextView
            android:id="@+id/text_shoe_size"
            style="@style/detailTextStyle"
            android:layout_marginTop="32dp"
            android:text="Shoe Size"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_company" />

        <EditText
            android:id="@+id/edit_shoe_size"
            style="@style/detailEditStyle"
            android:text="22"
            app:layout_constraintBottom_toBottomOf="@+id/text_shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_shoe_size"
            app:layout_constraintTop_toTopOf="@+id/text_shoe_size" />

        <TextView
            android:id="@+id/text_shoe_description"
            style="@style/detailTextStyle"
            android:layout_marginTop="32dp"
            android:text="Description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_size" />

        <EditText
            android:id="@+id/edit_shoe_description"
            style="@style/detailEditStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Comfortable running shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_description" />

        <Button
            android:id="@+id/btn_save"
            style="@style/detailButtonStyle"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_description" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/detailButtonStyle"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="@+id/btn_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>